crates/nash-codegen/src/uplc_optimizer/snapshots/nash_codegen__uplc_optimizer__tests__forced_reference.snap
---
source: crates/nash-codegen/src/uplc_optimizer/tests.rs
---
--- UPLC before
[(lam f_0 [[f_0 (con string "kept")] (con integer 42)]) (force (builtin trace))]
--- UPLC after
[(lam f_0 [[f_0 (con string "kept")] (con integer 42)]) (force (builtin trace))]
--- result
(con integer 42)
--- logs
["kept"]
