crates/nash-codegen/src/uplc_optimizer/snapshots/nash_codegen__uplc_optimizer__tests__recursive_self_application_is_not_unfolded.snap
---
source: crates/nash-codegen/src/uplc_optimizer/tests.rs
---
--- UPLC before
[(lam x_0 [x_0 x_0]) (lam x_0 [x_0 x_0])]
--- UPLC after
[(lam x_0 [x_0 x_0]) (lam x_0 [x_0 x_0])]
