crates/nash-codegen/src/uplc_optimizer/snapshots/nash_codegen__uplc_optimizer__tests__unused_value.snap
---
source: crates/nash-codegen/src/uplc_optimizer/tests.rs
---
--- UPLC before
[(lam x_0 (con integer 42))
  (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
--- UPLC after
(con integer 42)
--- result
(con integer 42)
--- logs
[]
